--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,6 @@ flake8 = "*"
 python_version = "3.9"
 
 [scripts]
-start = "python main.py"
+start = "python repo-insights/main.py"
 format = "black ."
 lint = "flake8 --show-source ."
