--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,12 @@
 [metadata]
 name = repo-insights
-version = "0.0.1"
+version = 0.0.1
+
+# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
+[options]
+package_dir=
+    =src
+packages=find:
+
+[options.packages.find]
+where=src
