Update and rename test.yml to build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,9 @@
-name: test
+name: build
 
-on:
-  release:
-    types: [published]
+on: [push]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
 
