--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-gql = "*"
 yaspin = "*"
 click = "*"
 repo-insights = {editable = true, path = "."}
+gql = "==v2.0.0"
 
 [dev-packages]
 flake8 = "*"
