--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ classifiers =
 
 [options.entry_points]
 console_scripts =
-    repo-insights = main:main
+    repo-insights = repoinsights.main:main
 
 # https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
 [options]
