modify setup.cfg to add install_requires

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,10 @@ console_scripts =
 package_dir=
     =src
 packages=find:
+install_requires =
+    yaspin
+    click
+    gql ==v2.0.0
 python_requires = >=3.7
 
 [options.packages.find]
